# The-Plazza

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: pipeline.yml
config/: menu.csv
include/: ConditionVariable.hpp  IPC.hpp  Mutex.hpp  Thread.hpp  Tools.hpp
include/IPC/: IPC.hpp
include/encapsulation/: ConditionVariable.hpp  Mutex.hpp  PlazzaException.hpp  SafeQueue.hpp  Thread.hpp
include/kitchen/: Kitchen.hpp
include/pizza/: APizza.hpp  Americana.hpp  Fantasia.hpp  IPizza.hpp  Margarita.hpp  MenuLoader.hpp  Pizza.hpp  PizzaFactory.hpp  PizzaSerializer.hpp  Regina.hpp
include/process/: Process.hpp
include/reception/: OrderParser.hpp  Reception.hpp
src/: ConditionVariable.cpp  IPC.cpp  Mutex.cpp  Process.cpp  Thread.cpp  main.cpp
src/IPC/: IPC.cpp
src/encapsulation/: ConditionVariable.cpp  Mutex.cpp  PlazzaException.cpp  Thread.cpp
src/kitchen/: Kitchen.cpp
src/pizza/: APizza.cpp  Americana.cpp  Fantasia.cpp  Margarita.cpp  MenuLoader.cpp  PizzaFactory.cpp  PizzaSerializer.cpp  Regina.cpp
src/process/: Process.cpp
src/reception/: OrderParser.cpp  Reception.cpp
